--- a/index.css
+++ b/index.css
@@ -25,6 +25,15 @@ body {
     }
 }
 
+main {
+    display: flex;
+    height: 100vh;
+    max-height: -webkit-fill-available;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 footer { 
     position: fixed;
     bottom: 10px;
