--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700;900&display=swap');
 
 :root {
     /* primary colors */
@@ -18,12 +18,6 @@ body {
     font-family: 'Red Hat Display', sans-serif;
     font-size: 16px;
     color: var(--desaturated-blue);
-}
-
-@media only screen and (max-width: 600px) {
-    body {
-        background-image: url(./images/pattern-background-mobile.svg);
-    }
 }
 
 main {
@@ -46,7 +40,7 @@ h1 {
 }
 
 strong {
-    font-weight: 900;
+    font-weight: 700;
     color: var(--dark-blue);
 }
 
@@ -116,23 +110,40 @@ strong {
     box-sizing: border-box;
     background-color: var(--bright-blue);
     color: hsl(0, 0%, 100%);
+    box-shadow: 0 20px 20px rgb(56 42 225 / 19%);
     width: 100%;
     border: none;
     border-radius: 10px;
     height: 50px;
     font-size: 15px;
-    font-weight: 900;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.cancel {
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.cancel a {
+    color: var(--desaturated-blue);
+    text-decoration: none;
 }
 
 footer { 
     position: fixed;
     bottom: 10px;
-    left: 0;
-    right: 0;
+    right: 10px;
     font-size: 11px; 
     text-align: center;
 }
     
 footer a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url(./images/pattern-background-mobile.svg);
+    }
 }
